<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scan.ScanActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/wallpaper_purple" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPeripheriques"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:itemCount="8"
        tools:listitem="@layout/item_list_peripheriques" />

    <Button
        android:id="@+id/buttonReScan"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:backgroundTint="@color/bg_light"
        android:backgroundTintMode="add"
        android:text="@string/_scan_activity_button_scan_again"
        android:textColor="@color/text_on_light_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewPeripheriques"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_scan_activity_text_title"
        android:textColor="@color/text_on_dark_bg"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewPeripheriques"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewNoDeviceDetected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_scan_activity_text_no_devices"
        android:textColor="@color/text_on_dark_bg"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewPeripheriques"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recyclerViewPeripheriques"
        app:layout_constraintVertical_bias="0.25" />


</androidx.constraintlayout.widget.ConstraintLayout>