<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.light.LightActivity">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/wallpaper_purple" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="133dp"
        android:layout_height="123dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_u" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="Underglow"
        android:textColor="@color/text_on_dark_bg"
        android:textSize="48sp"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewCar"
        android:layout_width="400dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_car" />

    <ImageView
        android:id="@+id/imageViewNeon"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_neon" />

    <Button
        android:id="@+id/buttonOnOff"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/bg_pink_button"
        android:backgroundTintMode="add"
        android:text="@string/_light_activity_button_on_off"
        android:textColor="@color/text_on_dark_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859" />

    <Button
        android:id="@+id/buttonDisconnect"
        android:layout_width="181dp"
        android:layout_height="46dp"
        android:backgroundTint="@color/bg_light"
        android:backgroundTintMode="add"
        android:text="@string/_light_activity_button_disconnect"
        android:textColor="@color/text_on_light_bg"
        app:layout_constraintBottom_toTopOf="@+id/imageViewCar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.489" />

    <Button
        android:id="@+id/buttonClignoter"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/bg_pink_button"
        android:backgroundTintMode="add"
        android:text="@string/_light_activity_button_flash_1s"
        android:textColor="@color/text_on_dark_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOnOff"
        app:layout_constraintVertical_bias="0.375" />

    <TextView
        android:id="@+id/textViewConnectedTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:textColor="@color/text_on_dark_bg"
        app:layout_constraintBottom_toTopOf="@+id/imageViewCar"
        app:layout_constraintEnd_toStartOf="@+id/buttonDisconnect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <TextView
        android:id="@+id/textViewNbAllumages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:textColor="@color/text_on_dark_bg"
        app:layout_constraintBottom_toTopOf="@+id/buttonOnOff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCar" />

</androidx.constraintlayout.widget.ConstraintLayout>